--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,28 +28,24 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  animated_snack_bar: ^0.4.0
+  animated_splash_screen: ^1.3.0
+  carousel_slider: ^5.0.0
+  country_picker: ^2.0.27
   cupertino_icons: ^1.0.8
   curved_navigation_bar: ^1.0.6
+  flutter:
+    sdk: flutter
+  flutter_bloc: ^9.0.0
+  flutter_screenutil: ^5.9.3
   image_picker: ^1.1.2
+  lottie: ^3.3.0
   path_provider: ^2.1.5
   shared_preferences: ^2.3.4
-  country_picker: ^2.0.27
-  animated_snack_bar: ^0.4.0
-  flutter_screenutil: ^5.9.3
-  carousel_slider: ^5.0.0
-  animated_splash_screen: ^1.3.0
-  lottie: ^3.3.0
-  flutter_bloc: ^9.0.0
+  skeletonizer: ^1.4.3
 dev_dependencies:
-  build_runner:
-  flutter_gen_runner:
-  flutter_test:
-    sdk: flutter
+  build_runner: null
+  flutter_gen_runner: null
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -57,10 +53,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -72,17 +69,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    
 
-    
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
