--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   lottie: ^3.3.0
   flutter_bloc: ^9.0.0
+  adaptive_theme: ^3.7.0
 dev_dependencies:
   build_runner:
   flutter_gen_runner:
