--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   flutter_screenutil: ^5.9.3
   image_picker: ^1.1.2
+  infinite_scroll_pagination: ^4.1.0
   lottie: ^3.3.0
   path_provider: ^2.1.5
   shared_preferences: ^2.3.4
