--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,12 @@ dependencies:
   animated_snack_bar: ^0.4.0
   animated_splash_screen: ^1.3.0
   carousel_slider: ^5.0.0
+  cloud_firestore: ^5.6.2
   country_picker: ^2.0.27
   cupertino_icons: ^1.0.8
   curved_navigation_bar: ^1.0.6
+  firebase_auth: ^5.4.1
+  firebase_core: ^3.10.1
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
