--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   animated_snack_bar: ^0.4.0
   animated_splash_screen: ^1.3.0
+  cached_network_image: ^3.4.1
   carousel_slider: ^5.0.0
   cloud_firestore: ^5.6.2
   country_picker: ^2.0.27
