--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   path_provider: ^2.1.5
   shared_preferences: ^2.3.4
   skeletonizer: ^1.4.3
+  url_launcher: ^6.3.1
 dev_dependencies:
   build_runner: null
   flutter_gen_runner: null
