--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   firebase_auth: ^5.4.1
   firebase_core: ^3.10.1
+  local_auth: ^2.3.0
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
