--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,16 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
         with:
-          node-version: '20'
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Run Tests
-        run: npm test
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
+      - run: flutter pub get 
+      - run: flutter build apk
+      - uses: actions/upload-artifact@v4
+        with:
+          name: release-apk
+          path: build/app/outputs/apk/release/app-release.apk
