--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   local_auth: ^2.3.0
   get_it: ^8.0.3
   equatable: ^2.0.7
+
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
@@ -54,8 +55,11 @@ dependencies:
   skeletonizer: ^1.4.3
   url_launcher: ^6.3.1
 dev_dependencies:
-  build_runner: null
+
   flutter_gen_runner: null
+  mockito: ^5.4.5
+  bloc_test: ^10.0.0
+  build_runner: ^2.4.15
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
