--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   shared_preferences: ^2.3.4
   skeletonizer: ^1.4.3
   url_launcher: ^6.3.1
+  mocktail: ^1.0.4
 dev_dependencies:
 
   flutter_gen_runner: null
